--- a/DoAn1/QuanLyVanBan/Views/Home/Index - Copy.cshtml
+++ b/DoAn1/QuanLyVanBan/Views/Home/Index - Copy.cshtml
@@ -1,10 +1,13 @@
-﻿
+﻿@*aaaaaaaaaaaaa*@
 @{
     ViewBag.Title = "Trang chủ";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<div>
 
+    aaaaaaaâ
+</div>
 
 <div class="col-lg-9">
     <div class="row">
